# rusty_exchange_dashboard

./: Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  config.json  redis_keys_and_channels.md
src/: main.rs  sse.rs
static/: dashboard.html  index.html
static/css/: style.css
static/js/: main.js  pnl-main.js
static/js/modules/: chartManager.js  dataManager.js  marketDataApp.js  pnlChartManager.js  pnlDataManager.js  tableManager.js  uiManager.js
templates/: base.html  dashboard.html  docs.html  index.html  navigation.html  pnl.html
